fix filepicker input width overlap

--- a/curiositymachine/sass/components/_widgets.scss
+++ b/curiositymachine/sass/components/_widgets.scss
@@ -1,6 +1,7 @@
 .pickwidget {
   .pickwidget-filename {
     border: none;
+    max-width: 100%;
   }
 
   button, input {
